[metadata]
name = monsterapply
version = 1.0.0
author = MarquisTheCoder
author_email = deshawn.m.williams01@gmail.com
long_description = file: README.rst
long_description_content_type = "text/x-rst"

url = 
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True